added fromDecimal(); improved docs

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.wrapper {
+  min-width: 400px;
+  width: 500px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 .example-desc {
   font-weight: bold;
   padding: 5px 0;
@@ -26,4 +33,18 @@ li {
   color: #101010;
 
   transform: scale(1);
+}
+
+.refresh {
+  display: inline-block;
+  text-decoration: none;
+  color: grey;
+
+  transition: transform 0.5s, color 0.5s;
+}
+
+.refresh:hover {
+  color: #101010;
+
+  transform: rotate(45deg);
 }
